src/packaged/main/default/objects/AccessToken__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>The unique access code that is auto-generated for the contact.</description>
    <inlineHelpText>The auto-generated access code for the contact.</inlineHelpText>
    <label>Code</label>
    <length>12</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>