src/packaged/main/default/objects/AccessToken__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Access Tokens</relationshipLabel>
    <relationshipName>AccessTokens</relationshipName>
    <type>Lookup</type>
</CustomField>